[package]
name = "rustwrap"
version = "0.1.0"
authors = ["dzh17 <dzheko.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.110"
serde_json = "1.0.44"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
actix-cors = "0.2.0"
futures = "0.3.8"
